--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-minimal
 title: CodeJourneyer homepage
 description: I'm not an expert; I'm just learning.
 
-- Email: [andrii.romanenko.js@gmail.com](mailto:andrii.romanenko.js@gmail.com)
-- Telegram: [@Andrii_Romanenko](https://t.me/Andrii_Romanenko)
-- Linkedin: [My Linkedin](https://www.linkedin.com/in/romanenko--andrii/)
-- Instagram: [My instagram](https://www.instagram.com/romanenko_ipo/)
+Email: [andrii.romanenko.js@gmail.com](mailto:andrii.romanenko.js@gmail.com)
+Telegram: [@Andrii_Romanenko](https://t.me/Andrii_Romanenko)
+Linkedin: [My Linkedin](https://www.linkedin.com/in/romanenko--andrii/)
+Instagram: [My instagram](https://www.instagram.com/romanenko_ipo/)
