--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme: jekyll-theme-minimal
 title: CodeJourneyer homepage
 description: I'm not an expert; I'm just learning.
 
-[andrii.romanenko.js@gmail.com](mailto:andrii.romanenko.js@gmail.com)
-[@Andrii_Romanenko](https://t.me/Andrii_Romanenko)
-[My Linkedin](https://www.linkedin.com/in/romanenko--andrii/)
-[My instagram](https://www.instagram.com/romanenko_ipo/)
+title: [andrii.romanenko.js@gmail.com](mailto:andrii.romanenko.js@gmail.com)
+title: [@Andrii_Romanenko](https://t.me/Andrii_Romanenko)
+title: [My Linkedin](https://www.linkedin.com/in/romanenko--andrii/)
+title: [My instagram](https://www.instagram.com/romanenko_ipo/)
