--- a/.hintrc
+++ b/.hintrc
@@ -10,6 +10,14 @@
         "button-name": "off"
       }
     ],
-    "axe/forms": "off"
+    "axe/forms": "off",
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "overflow: clip"
+        ]
+      }
+    ]
   }
 }
